--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,11 @@
 $tab_breakpoint: 1200px;
 $mobile_breakpoint: 767px;
 
+//font
+$main_font: 'Source Sans Pro', sans-serif;
+$bold_font: 'Oswald', sans-serif;
+
+
 //color palattee
 $color_blue: #00548f;
 $color_orange: #f78b3a;
@@ -10,6 +15,7 @@ $color_red: #b1040e;
 $color_red_hovered: #820000;
 $nav_shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12),
   0 1px 5px 0 rgba(0, 0, 0, 0.2);
+
 
 
 
